<resources>

    <string name="app_name">Calculator</string>
    <string name="add_audios">Add Audios</string>
    <string name="add_videos">Add Videos</string>
    <string name="add_images">Add Images</string>
    <string name="add_files">Add Files</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="file">File</string>
    <string name="no_app_found">No application found to perform this action!</string>
    <string name="no_item_found">No Item Found.\nPlease tap add button to add one.</string>
    <string name="select_file">Select File</string>

    <string name="hint">If you forgot password then just open the app. Enter 1122334 on calculator to recover your password."</string>

    <!--    Settings-->
    <string name="security">Security</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_security_question">Change Security Question</string>
    <string name="mroe">More</string>
    <string name="about_us">About us</string>
    <string name="dark_mode" >Dark Mode</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_security_question">Select Security Question</string>
    <string name="share_app_desc">Hey there, want some privacy and hide your private photos like really? \nCheckout this new cool app:\n\n </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="later">Later</string>
    <string name="inform_us_description">Please let us know what went wrong or if there is anything causing trouble. We would surely help you out.  Thanks</string>
    <string name="inform_us">Inform Us!</string>
    <string name="rate_app_desc">Hey, thanks a lot for taking time to rate our app. Can you please tell us if you are enjoying the app or not?</string>


    <string name="about_description"><![CDATA[    Calculator Vault is developed by <a href="https://twitter.com/android_bull">AndroidBull</a>.<br><br>
    Calculator Vault works perfectly with <a href="https://play.google.com/store/apps/details?id=com.androidbull.incognito.browser">Incognito Browser</a> as whatever you download
    using our Incognito Browser will be automatically locked inside Calculator Vault<br><br>
        ]]>
    </string>

    <string name="permission_not_granted">Sorry!!!, you can\'t use this app without granting permission</string>
    <string name="select_num_first">Select Number First</string>
    <string name="cant_divide_by_zero">Can\'t divide by 0</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="invalid_expression">Invalid Expression</string>
    <string name="password_must_be_4_digit">Password must be of 4 digits</string>
    <string name="syntax_error">Syntax Error</string>
    <string name="enter_new_pass">Please Enter your New Password.</string>
    <string name="sorry">Sorry</string>
    <string name="something_went_wrong">Something went wrong, please try again later.</string>
    <string name="deleting">Deleting</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ask_delete_all_intruder">Do you want to delete all intruder photos?</string>
    <string name="intruder">Intruder</string>
    <string name="error_password_not_matched">ERROR: Password not matched</string>
    <string name="enter_confirm_pass">Please confirm password</string>
    <string name="done">Done</string>
    <string name="password_updated">Password updated</string>
    <string name="invalid_confirm_pass">Confirm password is not matching</string>
    <string name="pass_must_be_numeric">ERROR: Password must be numeric</string>
    <string name="select_security_answer">Please enter security answer</string>
    <string name="security_question_incorrect">Security question is incorrect!</string>
    <string name="security_answer_incorrect">Security answer is incorrect!</string>
    <string name="your_pass_is">Your password is %1$s</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_permission_desc">Please grant all permissions to access additional functionality.</string>
    <string name="dismiss">Dismiss</string>
    <string name="select_atleat_1_image">Please select at least one image!</string>
    <string name="moving_dash_of_dash_size">Moving %1$d of %1$d </string>
    <string name="moving">Moving</string>
    <string name="moving_audios">Moving Audio(s)</string>
    <string name="moving_1_of">Moving 1 of %1$d</string>
    <string name="alert">Alert</string>
    <string name="delete_file_desc">Are you sure you want to delete selected files?</string>
    <string name="select_1_file">Please select at least one file!</string>
    <string name="moving_files">Moving File(s)</string>
    <string name="moving_images">Moving Image(s)</string>
    <string name="moving_videos">Moving Video(s)</string>
    <string name="select_1_video">Please select at least one video!</string>
    <string name="config_change">Configuration change</string>
    <string name="settings">Settings</string>
    <string name="select_all">Select All</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="no_one_intruded">No one intruded!</string>
    <string name="enter_current_pass">Please enter current password</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_pass_desc">Please confirm your password by entering it again</string>
    <string name="set_password">Set Password</string>
    <string name="set_pass_desc">Type your password (4 digit) into Calculator and hit \'=\'.</string>
    <string name="error">Error</string>
    <string name="confirm_pass_error_desc">Your \"Confirm Password\" does not match with previous password.</string>
    <string name="pass_set_desc">Password has been set successfully</string>
    <string name="download_now">Download Now</string>
    <string name="incognito_browser_dialog_title">Increase Privacy</string>
    <string name="incognito_browser_download_desc">Browse privately and lock everything you download with Incognito Browser</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Welcome to Calculator Photo Vault, here you can have more privacy than other.\n\n%1$s</string>
    <string name="cancel">Cancel</string>
    <string name="cd_todo" translatable="false">todo</string>
    <string name="str_nothing_downloaded"><b>Nothing Downloaded!</b>  Everything you downloaded using Incognito Browser will automatically be saved here!</string>
    <string name="str_download_incognito_browser_now">Download Incognito Browser Now</string>
    <string name="browser_package_name" translatable="false">com.androidbull.incognito.browser</string>
    <string name="paid_browser_package_name" translatable="false">com.androidbull.incognito.browser.paid</string>
    <string name="str_files_are_downloaded_using_incognito_browser">The following files are downloaded using <u>Incognito Browser</u></string>
    <string name="formula_divide_by_zero_error">Error: Division by zero</string>

    <string name="master_password" translatable="false">1122334</string>

    <string name="photos">Photos</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="files">Files</string>
    <string name="browser">Browser</string>
    <string name="pref_intruder_mode_key">pref_intruder_mode_key</string>
    <string name="pref_intruder_mode_title">Intruder Mode</string>
    <string name="str_permission_required_for_intruder_mode">Camera permissions required for Intruder Mode.</string>
    <string name="str_permission_required_for_intruder_mode_allow_from_settings">Camera permissions required for Intruder Mode. Grant Camera Permissions from settings</string>
    <string name="str_permission_required_intruder_mode_disabled">Camera permissions required. Intruder Mode is disabled for now. Please enable it from Settings</string>
    <string name="pref_intruder_mode_summary">Capture Selfie secretly when wrong password entered</string>
    <string name="str_not_connected_to_internet">Not Connected to internet. Try Again</string>
    <string name="str_security_question">Security Question</string>
    <string name="str_please_enter_security_answer">Please enter security answer</string>

</resources>
