<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.NewChangePasswordActivity">

    <include
        android:id="@+id/change_pass_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/change_password_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pass_toolbar" />

    <TextView
        android:id="@+id/change_pass_tv_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/enter_current_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_tv_title" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/change_password_cl_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pass_tv_instruction">


        <EditText
            android:id="@+id/change_pass_et_1"
            style="@style/change_pass_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/change_pass_view_1"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/change_pass_view_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/change_pass_view_2"
            app:layout_constraintTop_toBottomOf="@+id/change_pass_et_1" />


        <EditText
            android:id="@+id/change_pass_et_2"
            style="@style/change_pass_style"
            app:layout_constraintLeft_toLeftOf="@+id/change_pass_view_2"
            app:layout_constraintRight_toRightOf="@+id/change_pass_view_2"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/change_pass_view_2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            app:layout_constraintLeft_toRightOf="@+id/change_pass_view_1"
            app:layout_constraintRight_toLeftOf="@+id/change_pass_view_3"
            app:layout_constraintTop_toBottomOf="@+id/change_pass_et_2" />


        <EditText
            android:id="@+id/change_pass_et_3"
            style="@style/change_pass_style"
            app:layout_constraintLeft_toLeftOf="@+id/change_pass_view_3"
            app:layout_constraintRight_toRightOf="@+id/change_pass_view_3"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/change_pass_view_3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            app:layout_constraintLeft_toRightOf="@+id/change_pass_view_2"
            app:layout_constraintRight_toLeftOf="@+id/change_pass_view_4"
            app:layout_constraintTop_toBottomOf="@+id/change_pass_et_3" />


        <EditText
            android:id="@+id/change_pass_et_4"
            style="@style/change_pass_style"
            app:layout_constraintLeft_toLeftOf="@+id/change_pass_view_4"
            app:layout_constraintRight_toRightOf="@+id/change_pass_view_4"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/change_pass_view_4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            app:layout_constraintLeft_toRightOf="@+id/change_pass_view_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_pass_et_4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/change_password_tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_cl_pass"
        tools:visibility="visible" />


    <Button
        android:id="@+id/change_pass_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/newColorAccent"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_tv_error" />


</androidx.constraintlayout.widget.ConstraintLayout>